force-app/main/default/objects/AG_Service_Request__c/AG_Service_Request__c.object-meta.xml
<CustomObject>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Service Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>