force-app/main/default/objects/AG_Service_Request__c/fields/AG_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>AG_Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Needs</fullName>
            </value>
            <value>
                <fullName>Adults</fullName>
            </value>
            <value>
                <fullName>Children and Families</fullName>
            </value>
            <value>
                <fullName>Older Adults</fullName>
            </value>
            <value>
                <fullName>Person with Special Needs</fullName>
            </value>
            <value>
                <fullName>Teens and Young Adults</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>