force-app/main/default/objects/AG_Service_Request__c/fields/AG_Status__c.field-meta.xml
<CustomField>
    <fullName>AG_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
                <default>true</default>
                <label>Started</label>
            </value>
            <value>
                <fullName>In Assessment</fullName>
            </value>
            <value>
                <fullName>In service</fullName>
            </value>
            <value>
                <fullName>Discharged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>