force-app/main/default/objects/AG_Service_Request__c/fields/AG_Template__c.field-meta.xml
<CustomField>
    <fullName>AG_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>AG_Template__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>