force-app/main/default/objects/AG_Service_Request__c/fields/AG_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>AG_Total_Score__c</fullName>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>