force-app/main/default/objects/AG_Service_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AG_Intake__c</columns>
    <columns>AG_Status__c</columns>
    <columns>AG_Service_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>